--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Chhaya</h1>
-						   					<h2>Designer | Developer | Freelancer</h2>
-												<p><a class="btn btn-primary btn-learn" href="">Download CV <i class="icon-download4"></i></a></p>
+						   					<h2 >Designer | Developer | Freelancer</h2>
+												<p><a class="btn btn-primary btn-learn" href="C:\Users\Chhaya Sharma\Desktop\jackson\jackson\ChhayaSharma_Resume.docx">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/pic.png);">
+				   <!-- 	<li style="background-image: url(images/pic.png);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -118,14 +118,14 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
-												<!-- <h2> <a href="https://colorlib.com/" target="_blank">lorlib.com</a></h2> -->
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
-											</div>
+											 <h2> <a href="https://colorlib.com/" target="_blank">lorlib.com</a></h2> -->
+												<!-- <p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p> -->
+<!-- 										</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
-				   	</li>
+				   	</li> --> 
 				  	</ul>
 			  	</div>
 			</section>
@@ -183,7 +183,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br> that I completed 15+ projects sucessfully!</h2>
+										<h2>I am thrilled to share that I have completed 10+ projects successfully! </h2>
 									</div>
 								</div>
 							</div>
